Planet icon stays selected until planet is zoomed

--- a/webgl/index.html
+++ b/webgl/index.html
@@ -30,6 +30,7 @@ label {
     background: url('images/planets.png') no-repeat left top;
 }
 
+.zoom-control .ui-selected,
 .zoom-control .ui-selecting {
     background: url('images/planets-selected.png') no-repeat left top;
 }
