--- a/webgl/index.html
+++ b/webgl/index.html
@@ -145,6 +145,7 @@
 
         $('.zoom-control').selectable({
             selected: function(ev, ui) {
+                spaceD3.zoomToPlanet();
                 spaceD3.drawScene();  
             }
         });
@@ -190,7 +191,7 @@
         dvalue.change(function() {
             var value = dvalue.val();
             if(value < 1) value = 1;
-            else if(value > 50) value = 50;
+            else if(value > 5000) value = 5000;
             dvalue.val(value);
             if(value != dslider.slider("value")) {
                 dslider.slider("value", value);
