--- a/webgl/index.html
+++ b/webgl/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<title>Alien Planets by Dan Posch and Jiwon Kim</title>
+<title>Many Worlds</title>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
 <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
@@ -247,8 +247,8 @@
 <body>
     <div id="top">
         <div id="title">
-            <h1>Alien Planets</h1>
-            <h2>by <a href="http://dcpos.ch">Dan Posch</a> and <a href="http://jiwonk.im">Jiwon Kim</a></h2> 
+            <h1>Many Worlds</h1>
+            <h2>by <a href="http://dcpos.ch">DC</a> and <a href="http://jiwonk.im">Jiwon</a></h2> 
             <p>
                 You are looking at our sun and its planets, along with confirmed extrasolar planets that have radii and orbit data that is included in the solar system for perspective. The radii and distances are accurately scaled (relatively, of course), but you can increase the radii for a better view of the planets.
             </p> 
@@ -289,10 +289,8 @@
 
     <br />
     <canvas id="space-webgl" width="800" height="400"></canvas>
-    <br/>
 
-    <br/>
-    <br/>
+    <canvas id="viz-webgl" width="800" height="400"></canvas>
 </body>
 
 </html>
