Edited explanation text

--- a/webgl/index.html
+++ b/webgl/index.html
@@ -250,10 +250,11 @@
             <h1>Many Worlds</h1>
             <h2>by <a href="http://dcpos.ch">DC</a> and <a href="http://jiwonk.im">Jiwon</a></h2> 
             <p>
-                You are looking at our sun and its planets, along with confirmed extrasolar planets that have radii and orbit data that is included in the solar system for perspective. The radii and distances are accurately scaled (relatively, of course), but you can increase the radii for a better view of the planets.
+                You are looking at all confirmed exoplanets. For perspective, they're shown orbiting our star, the sun, alongside the planets in our solar system.
+                The radii and distances are accurately scaled, but you can increase the radii for a better view of distant planets.
             </p> 
             <p>
-                Use 'w' to zoom in, 'e' to do it faster. Use 's' to zoom out, 'd' to do it faster. Fiddle with the controls to change what you're looking at.
+                Use 'w' to zoom in, 'e' to do it faster. Use 's' to zoom out, 'd' to do it faster. Click and drag to rotate.
             </p>
         </div>
         <div id="zoom-and-scale-controls">
