--- a/webgl/index.html
+++ b/webgl/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <br />
-    <canvas id="space-webgl" width="800" height="400"></canvas>
+    <canvas id="space-webgl" class="webgl" width="800" height="400"></canvas>
 
     <script type="text/javascript" src="jquery-1.8.2.min.js"></script>  
     <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
@@ -92,6 +92,7 @@
     <script type="text/javascript" src="space-webgl.js"></script>
     <script type="text/javascript" src="space-d3.js"></script>
     <script type="text/javascript" src="controls.js"></script>
+    <script type="text/javascript" src="color-legend.js"></script>
 
     <script type="text/javascript" src="exo-d3.js"></script>
 </body>
