--- a/webgl/index.html
+++ b/webgl/index.html
@@ -73,7 +73,7 @@
 
     <br />
     <canvas id="space-webgl" class="webgl" width="800" height="400"></canvas>
-    <div id="planetdata" >LOLZLOLZ</div>
+    <div id="planetdata"></div>
 
     <script type="text/javascript" src="jquery-1.8.2.min.js"></script>  
     <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
