--- a/webgl/index.html
+++ b/webgl/index.html
@@ -74,6 +74,8 @@
     <br />
     <canvas id="space-webgl" class="webgl" width="800" height="400"></canvas>
     <div id="planetdata"></div>
+    <div id="note">*Note that some selected exoplanets may not be displayed<br />
+    in the <span class="webgl">WebGL</span><span class="d3">d3</span> view because of missing radii data</div>
 
     <script type="text/javascript" src="jquery-1.8.2.min.js"></script>  
     <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
